--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,9 @@
   --fs-h2:2.25rem;
   --fs-h3:1.25rem;
   --fs-body:1rem;
+
+  --bs :0.25em 0.25em 0.75em rgba(0,0,0,0.5),
+        0.125em 0.125em 0.25em rgba(0,0,0,.15);
 }
 
 /* media queries for bigger screen sizes */
@@ -39,7 +42,7 @@ body{
   margin: 0;
   font-family: var(--ff-primary);
   font-size: var(--fs-body);
-  line-height: 1.6;
+  line-height: 1;
 }
 
 section{
@@ -83,6 +86,8 @@ h3{ font-size: var(--fs-h3);}
 .section__subtitle--about{
   background: var(--clr-accent);
   font-family: var(--ff-secondary);
+  margin-bottom: 1em;
+  padding: .25em 1em ;
 }
 
 
@@ -98,4 +103,40 @@ nav{
 
 .intro{
   position: relative;
+}
+
+.intro__img{
+  box-shadow: var(--bs);
+}
+
+@media (min-width:600px){
+  .intro{
+    display: grid;
+    width: min-content;
+    margin: 0 auto;
+    grid-column-gap: 1em;
+  
+    grid-template-areas: 
+      "img title"
+      "img subtile";
+    grid-template-columns: min-content max-content;
+  }
+
+  .intro__img{
+    grid-area: img;
+    min-width: 250px; 
+    /* position: relative; */
+    z-index: 2;
+  }
+
+  .section__subtitle--intro{
+    align-self: start;
+    grid-column: -1 / 1;
+    grid-row: 2;
+    text-align: right;
+    position: relative;
+    left: -1.5em;
+    width: calc(100% + 1.5em);
+  }
+
 }
