css for the what-i-do section

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,34 @@ img{
   max-width: 100%;
 }
 
+strong{font-weight: var(--fw--bold);}
+
+:focus{
+  outline: 3px solid var(--clr-accent);
+  outline-offset: 3px;
+}
+/* Buttons */
+.btn{
+  display: inline-block;
+  padding: 1em 2.5em;
+  background: var(--clr-accent);
+  color: var(--clr-dark);
+  text-decoration: none;
+  cursor: pointer;
+  font-size: .8rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: var(--fw--bold);
+  transition: transform 200ms ease-in-out;
+}
+  .btn:hover{
+    transform: scale(1.1);
+  }
+
+
+
+
+
 /* Typography */
 h1, h2, h3{
   line-height: 1.1;
@@ -76,6 +104,7 @@ h3{ font-size: var(--fs-h3);}
 .section__title--intro strong{
   display: block;
 }
+
 
 .section__subtitle{
   margin: 0;
@@ -139,4 +168,58 @@ nav{
     width: calc(100% + 1.5em);
   }
 
+}
+
+/* My services styles */
+
+.my-services{
+  background-color: var(--clr-dark);
+  background-image: url(../img/servicebackground.png);
+  background-size: cover;
+  background-blend-mode: multiply;
+  color: var(--clr-light);
+  text-align: center;
+}
+
+.section__title--services{
+  color: var(--clr-accent);
+  position: relative;
+}
+.section__title--services:after{
+  content: "";
+  display: block;
+  width: 3em;
+  height: 1px;
+  background: var(--clr-light);
+  margin: .5em auto 1em;
+  opacity: 0.25;
+}
+
+.services{
+  margin-bottom: 4em;
+}
+
+.service{
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+
+
+@media (min-width : 800px)
+{
+  .services{
+    display: flex;
+    max-width: 1000px;
+    margin: 0 auto;
+    margin-bottom: 4em;
+  }
+
+  .service + .service{
+    margin-left: 2em;
+  }
+
+  .service > h3{
+    font-weight: bold;
+  }
 }
