--- a/css/style.css
+++ b/css/style.css
@@ -176,9 +176,51 @@ header{
   color: var(--clr-accent);
 }
 
-/* .nav__item a{
-  padding: 1em;
-} */
+.nav-toggle{
+  padding: .25em;
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  z-index: 1000;
+
+}
+
+/* Hamburger styles */
+
+.hamburger{
+  display: block;
+  position: relative;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after{
+  background: var(--clr-dark);
+  width: 2em;
+  height: 3px;
+  border-radius: 1em;
+  transition: transform 250ms  ease-in;
+}
+
+.hamburger::before,
+.hamburger::after{
+  content: "";  
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+
+
+.hamburger::before{
+  top: 6px;
+}
+
+.hamburger::after{
+  bottom: 6px;
+}
 
 
 
