somme js effects for clicking on the hamburger

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,9 @@
   }
 
 /* General Styles */
+html{
+  scroll-behavior: smooth;
+}
 body{
   background: var(--clr-light);
   color: var(--clr-dark);
@@ -57,7 +60,7 @@ img{
 strong{font-weight: var(--fw--bold);}
 
 :focus{
-  outline: 3px solid var(--clr-accent);
+  outline: 2px solid var(--clr-accent);
   outline-offset: 3px;
 }
 /* Buttons */
@@ -151,7 +154,7 @@ header{
   right: 0;
   z-index: 100;
   transform: translateX(100%);
-  transition: transform 250ms cubic-bazier(.5 ,0, .5, 1);
+  transition: transform 250ms ease-in;
 }
 
 .nav__list{
@@ -185,8 +188,33 @@ header{
   top: 1em;
   right: 1em;
   z-index: 1000;
+  outline: none;
 
 }
+
+.nav-open .nav{
+  transform: translateX(0);
+  
+}
+
+.nav-open .nav-toggle{
+  position: fixed;
+}
+
+.nav-open .hamburger{
+  transform: rotate(.625turn);
+}
+
+.nav-open .hamburger::before{
+  transform: rotate(90deg) translateX(-6px);
+}
+
+.nav-open .hamburger::after{
+  opacity: 0;
+}
+
+
+
 
 /* Hamburger styles */
 
@@ -198,7 +226,7 @@ header{
 .hamburger,
 .hamburger::before,
 .hamburger::after{
-  background: var(--clr-dark);
+  background: var(--clr-accent);
   width: 2em;
   height: 3px;
   border-radius: 1em;
